work in progress

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 </head>
 
 <body>
-
-    <header id="homeID" class="home">
-        <nav class="top-nav">
+    
+    <nav class="top-nav">
             <ul class="top-nav-ul">
                 <li><a href="#homeID">HOME</a></li>
                 <li><a href="#aboutID">ABOUT</a></li>
@@ -29,11 +28,12 @@
             <hr class="nav-hr">
         </nav>
 
-        <img src="http://www.placehold.it/200x200">
-        <h1><b>JOHN</b> DOE</h1>
-        <div class="">
-            <p class="arrows-text">Scroll down to see more</p>
-            <p class="arrows">&#xab;</p>
+    <header id="homeID" class="home">
+        <img class="home-img" alt="placeholder" src="http://www.placehold.it/200x200">
+        <h1 class="home-name"><b>JOHN</b> DOE</h1>
+        <div class="home-footer">
+            <p class="home-arrows-text">Scroll down to see more</p>
+            <p class="home-arrows-icon">&#xab;</p>
         </div>
 
     </header>
