work in progress

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <header id="homeID" class="home">
         <img class="home-img" alt="placeholder" src="http://www.placehold.it/200x200">
         <h1 class="home-name"><b>JOHN</b> DOE</h1>
-        <div class="home-footer">
+        <footer class="home-footer">
             <p class="home-arrows-text">Scroll down to see more</p>
             <p class="home-arrows-icon">&#xab;</p>
-        </div>
+        </footer>
 
     </header>
 
