work in progress

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img class="home-img" alt="placeholder" src="http://www.placehold.it/200x200">
         <h1 class="home-name"><b>JOHN</b> DOE</h1>
         <footer class="home-footer">
-            <p class="home-arrows-text">Scroll down to see more</p>
+            <p class="home-arrows-text">SCROLL DOWN TO SEE MORE</p>
             <p class="home-arrows-icon">&#xab;</p>
         </footer>
 
