work in progress

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
 </head>
 
 <body>
-    
+
     <nav class="top-nav">
-            <ul class="top-nav-ul">
-                <li><a href="#homeID">HOME</a></li>
-                <li><a href="#aboutID">ABOUT</a></li>
-                <li><a href="#portfolioID">PORTFOLIO</a></li>
-                <li><a href="#skillsID">SKILLS</a></li>
-                <li><a href="#experienceID">EXPERIENCE</a></li>
-                <li><a href="#contactID">CONTACT</a></li>
-            </ul>
-            <hr class="nav-hr">
-        </nav>
+        <ul class="top-nav-ul">
+            <li><a href="#homeID">HOME</a></li>
+            <li><a href="#aboutID">ABOUT</a></li>
+            <li><a href="#portfolioID">PORTFOLIO</a></li>
+            <li><a href="#skillsID">SKILLS</a></li>
+            <li><a href="#experienceID">EXPERIENCE</a></li>
+            <li><a href="#contactID">CONTACT</a></li>
+        </ul>
+        <hr class="nav-hr">
+    </nav>
 
     <header id="homeID" class="home">
         <img class="home-img" alt="placeholder" src="http://www.placehold.it/200x200">
         <h1 class="home-name"><b>JOHN</b> DOE</h1>
         <footer class="home-footer">
             <p class="home-arrows-text">SCROLL DOWN TO SEE MORE</p>
-            <p class="home-arrows-icon">&#xab;</p>
+            <p class="home-arrows-icon"><a href="#about">&#xab;</a></p>
         </footer>
 
     </header>
@@ -80,9 +80,9 @@
     </section>
 
     <section id="skillsID" class="skills">
+        <h1>Skills</h1>
         <section class="skills-description">
-            <h1>Skills</h1>
-            <section>
+            <section class="skill1">
                 <h2>Proficiency skills</h2>
                 <ul>
                     <li>Photoshop <span>Level 5</span></li>
@@ -90,7 +90,7 @@
                     <li>Java <span>Level 3</span></li>
                 </ul>
             </section>
-            <section>
+            <section class="skill2">
                 <h2>Personal skills</h2>
                 <ul>
                     <li>Creative <span>Level 5</span></li>
@@ -98,7 +98,7 @@
                     <li>TeamWork <span>Level 4</span></li>
                 </ul>
             </section>
-            <section>
+            <section class="skill3">
                 <h2>Professional skills</h2>
                 <ul>
                     <li>UI/UX Design <span>Level 4</span></li>
@@ -176,10 +176,19 @@
             <p>0744 222 333</p>
             <p>SOCIAL MEDIA</p>
 
-            <ul class="horizontal-list">
-                <li><a href="http://www.facebook.com" target=_blank><i class="footer-icons footer-icon-github" aria-hidden="true"></i><span class="hidden">Github</span></a></li>
-                <li><a href="http://www.github.com" target=_blank><i class="footer-icons footer-icon-facebook" aria-hidden="true"></i><span class="hidden">Facebook</span></a></li>
-                <li><a href="https://www.freecodecamp.com" target=_blank><i class="footer-icons footer-icon-freecodecamp" aria-hidden="true"></i><span class="hidden">Freecodecamp</span></a></li>
+            <ul>
+                <li>
+                    <a href="http://www.facebook.com" target=_blank><i class="footer-icons footer-icon-github" aria-hidden="true">
+                        </i>
+                        <span class="hidden">Github</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://www.github.com" target=_blank><i class="footer-icons footer-icon-facebook" aria-hidden="true"></i><span class="hidden">Facebook</span></a>
+                </li>
+                <li>
+                    <a href="https://www.freecodecamp.com" target=_blank><i class="footer-icons footer-icon-freecodecamp" aria-hidden="true"></i><span class="hidden">Freecodecamp</span></a>
+                </li>
             </ul>
         </adress>
     </footer>
