work in progress

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </section>
 
     <section id="skillsID" class="skills">
-        <h1>Skills</h1>
+        <h1 class="skills-header-title">Skills</h1>
         <section class="skills-description">
             <section class="skill1">
                 <h2>Proficiency skills</h2>
@@ -107,9 +107,8 @@
                 </ul>
             </section>
         </section>
-
+        <h2 class="testimonials-header">-Testimonials-</h2>
         <section class="testimonials">
-            <h2>Testimonials</h2>
 
             <article class="article1">
                 <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut vulputate libero, ut fermentum ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed auctor ex ac iaculis luctus. Etiam ut ligula varius, eleifend metus a, pharetra ex.</blockquote>
