work in progress

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1 class="home-name"><b>JOHN</b> DOE</h1>
         <footer class="home-footer">
             <p class="home-arrows-text">SCROLL DOWN TO SEE MORE</p>
-            <p class="home-arrows-icon"><a href="#about">&#xab;</a></p>
+            <p class="home-arrows-icon"><a href="#about-me">&#xab;</a></p>
         </footer>
 
     </header>
@@ -63,7 +63,7 @@
     </section>
 
     <section id="portfolioID" class="portfolio">
-        <h1>Portofolio</h1>
+        <h1>PORTFOLIO</h1>
         <ul>
             <li><img src="http://www.placehold.it/150x150"></li>
             <li><img src="http://www.placehold.it/150x150"></li>
