work in progress

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Personal Resume</title>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Custom JS-->
     <script src="script.js"></script>
     <!-- FA -->
@@ -83,7 +81,7 @@
         <h1 class="skills-header-title">Skills</h1>
         <section class="skills-description">
             <section class="skill1">
-                <h2>Proficiency skills</h2>
+                <h2><span class="skills-title-span"></span>Proficiency Skill</h2>
                 <ul>
                     <li>Photoshop <span>Level 5</span></li>
                     <li>JS <span></span>Level 4</li>
@@ -91,7 +89,7 @@
                 </ul>
             </section>
             <section class="skill2">
-                <h2>Personal skills</h2>
+                <h2><span class="skills-title-span"></span>Personal Skill</h2>
                 <ul>
                     <li>Creative <span>Level 5</span></li>
                     <li>Leading <span>Level 4</span></li>
@@ -99,7 +97,7 @@
                 </ul>
             </section>
             <section class="skill3">
-                <h2>Professional skills</h2>
+                <h2><span class="skills-title-span"></span>Professional Skill</h2>
                 <ul>
                     <li>UI/UX Design <span>Level 4</span></li>
                     <li>Graphic Design <span>Level 4</span></li>
