--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<!-- -->
+
 <html>
 
 <head>
     <title>Personal Resume</title>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Custom JS-->
     <script src="script.js"></script>
     <!-- FA -->
@@ -31,7 +33,7 @@
         <h1 class="home-name"><b>JOHN</b> DOE</h1>
         <footer class="home-footer">
             <p class="home-arrows-text">SCROLL DOWN TO SEE MORE</p>
-            <p class="home-arrows-icon"><a href="#about-me">&#xab;</a></p>
+            <p class="home-arrows-icon"><a href="#about">&#xab;</a></p>
         </footer>
 
     </header>
@@ -61,7 +63,7 @@
     </section>
 
     <section id="portfolioID" class="portfolio">
-        <h1>PORTFOLIO</h1>
+        <h1>Portofolio</h1>
         <ul>
             <li><img src="http://www.placehold.it/150x150"></li>
             <li><img src="http://www.placehold.it/150x150"></li>
@@ -81,7 +83,7 @@
         <h1 class="skills-header-title">Skills</h1>
         <section class="skills-description">
             <section class="skill1">
-                <h2><span class="skills-title-span"></span>Proficiency Skill</h2>
+                <h2><span class="skills-title-span"></span>Proficiency skills</h2>
                 <ul>
                     <li>Photoshop <span>Level 5</span></li>
                     <li>JS <span></span>Level 4</li>
@@ -89,7 +91,7 @@
                 </ul>
             </section>
             <section class="skill2">
-                <h2><span class="skills-title-span"></span>Personal Skill</h2>
+                <h2><span class="skills-title-span"></span>Personal skills</h2>
                 <ul>
                     <li>Creative <span>Level 5</span></li>
                     <li>Leading <span>Level 4</span></li>
@@ -97,7 +99,7 @@
                 </ul>
             </section>
             <section class="skill3">
-                <h2><span class="skills-title-span"></span>Professional Skill</h2>
+                <h2><span class="skills-title-span"></span>Professional skills</h2>
                 <ul>
                     <li>UI/UX Design <span>Level 4</span></li>
                     <li>Graphic Design <span>Level 4</span></li>
