Left Nav Buttons Added (Restore point)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Personal Resume</title>
+    <title>Resume</title>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap -->
@@ -28,8 +28,21 @@
         <hr class="nav-hr">
     </nav>
 
+    <nav class="left-side-nav">
+        <div class="dot-nav">
+            <ul>
+                <li class="current"><a href="#homeID">Home</a></li>
+                <li><a href="#aboutID">About</a></li>
+                <li><a href="#portfolioID">Portofolio</a></li>
+                <li><a href="#skillsID">Skills</a></li>
+                <li><a href="#experienceID">Experience</a></li>
+                <li><a href="#contactID">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <header id="homeID" class="home">
-        <img class="home-img" alt="placeholder" src="http://www.placehold.it/200x200">
+        <img class="home-img" alt="placeholder" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTz-9DyxIvSBQWgaCF-kxnckbiPRrC758f-aigoKb8YmK0DIdmE">
         <h1 class="home-name"><b>JOHN</b> DOE</h1>
         <footer class="home-footer">
             <p class="home-arrows-text">SCROLL DOWN TO SEE MORE</p>
@@ -45,6 +58,7 @@
             <h1>About me</h1>
             <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut vulputate libero, ut fermentum ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed auctor ex ac iaculis luctus. Etiam ut ligula varius, eleifend metus a, pharetra ex.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut vulputate libero, ut fermentum ante.</p>
             <footer>
                 <i>John Doe</i>
             </footer>
@@ -54,10 +68,10 @@
             <h1>Achievements</h1>
             <br>
             <ul>
-                <li><img src="http://www.placehold.it/150x150"></li>
-                <li><img src="http://www.placehold.it/150x150"></li>
-                <li><img src="http://www.placehold.it/150x150"></li>
-                <li><img src="http://www.placehold.it/150x150"></li>
+                <li><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTz-9DyxIvSBQWgaCF-kxnckbiPRrC758f-aigoKb8YmK0DIdmE"></li>
+                <li><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTz-9DyxIvSBQWgaCF-kxnckbiPRrC758f-aigoKb8YmK0DIdmE"></li>
+                <li><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTz-9DyxIvSBQWgaCF-kxnckbiPRrC758f-aigoKb8YmK0DIdmE"></li>
+                <li><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTz-9DyxIvSBQWgaCF-kxnckbiPRrC758f-aigoKb8YmK0DIdmE"></li>
             </ul>
         </section>
     </section>
