Contact Background + Fonts optimization

--- a/index.html
+++ b/index.html
@@ -94,34 +94,34 @@
     </section>
 
     <section id="skillsID" class="skills">
-        <h1 class="skills-header-title">Skills</h1>
+        <h1 class="skills-header-title">SKILLS</h1>
         <section class="skills-description">
             <section class="skill1">
                 <h2><span class="skills-title-span"></span>Proficiency skills</h2>
                 <ul>
-                    <li>Photoshop <span>Level 5</span></li>
-                    <li>JS <span></span>Level 4</li>
-                    <li>Java <span>Level 3</span></li>
+                    <li>Photoshop <span class="skill-level">Level 5</span></li>
+                    <li>JS <span class="skill-level">Level 4</span></li>
+                    <li>Java <span class="skill-level">Level 3</span></li>
                 </ul>
             </section>
             <section class="skill2">
                 <h2><span class="skills-title-span"></span>Personal skills</h2>
                 <ul>
-                    <li>Creative <span>Level 5</span></li>
-                    <li>Leading <span>Level 4</span></li>
-                    <li>TeamWork <span>Level 4</span></li>
+                    <li>Creative <span class="skill-level">Level 5</span></li>
+                    <li>Leading <span class="skill-level">Level 4</span></li>
+                    <li>TeamWork <span class="skill-level">Level 4</span></li>
                 </ul>
             </section>
             <section class="skill3">
                 <h2><span class="skills-title-span"></span>Professional skills</h2>
                 <ul>
-                    <li>UI/UX Design <span>Level 4</span></li>
-                    <li>Graphic Design <span>Level 4</span></li>
-                    <li>Web Design <span>Level 4</span></li>
+                    <li>UI/UX Design <span class="skill-level">Level 4</span></li>
+                    <li>Graphic Design <span class="skill-level">Level 4</span></li>
+                    <li>Web Design <span class="skill-level">Level 4</span></li>
                 </ul>
             </section>
         </section>
-        <h2 class="testimonials-header">-Testimonials-</h2>
+        <h2 class="testimonials-header sub-title">-TESTIMONIALS-</h2>
         <section class="testimonials">
 
             <article class="article1">
@@ -161,17 +161,17 @@
     </section>
 
     <section id="experienceID" class="experience">
-        <h1>Experience</h1>
+        <h1>EXPERIENCE</h1>
         <div>
-            <h2>Education</h2>
+            <h2 class="sub-title">-EDUCATION-</h2>
             <ul>
                 <li>SSC-2009</li>
                 <li>HSC-2011</li>
-                <li>2011-Presen</li>
+                <li>2011-Present</li>
             </ul>
         </div>
         <div>
-            <h2>Work</h2>
+            <h2 class="sub-title">-WORK-</h2>
             <ul>
                 <li>Adobe</li>
                 <li>Microsoft</li>
