Mix blend mode colors - experimental

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <nav class="top-nav">
+    <nav class="top-nav blend">
         <ul class="top-nav-ul">
             <li><a href="#homeID">HOME</a></li>
             <li><a href="#aboutID">ABOUT</a></li>
@@ -28,15 +28,15 @@
         <hr class="nav-hr">
     </nav>
 
-    <nav class="left-side-nav">
+    <nav class="left-side-nav blend-side-nav">
         <div class="dot-nav">
             <ul>
-                <li class="current"><a href="#homeID">Home</a></li>
-                <li><a href="#aboutID">About</a></li>
-                <li><a href="#portfolioID">Portofolio</a></li>
-                <li><a href="#skillsID">Skills</a></li>
-                <li><a href="#experienceID">Experience</a></li>
-                <li><a href="#contactID">Contact</a></li>
+                <li><a href="#homeID">HOME</a></li>
+                <li><a href="#aboutID">ABOUT</a></li>
+                <li><a href="#portfolioID">PORTFOLIO</a></li>
+                <li><a href="#skillsID">SKILLS</a></li>
+                <li><a href="#experienceID">EXPERIENCE</a></li>
+                <li><a href="#contactID">CONTACT</a></li>
             </ul>
         </div>
     </nav>
