--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section id="aboutID" class="about">
 
         <article class="about-me">
-            <h1>About me</h1>
+            <h1>ABOUT ME</h1>
             <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut vulputate libero, ut fermentum ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed auctor ex ac iaculis luctus. Etiam ut ligula varius, eleifend metus a, pharetra ex.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut vulputate libero, ut fermentum ante.</p>
@@ -65,7 +65,7 @@
         </article>
 
         <section class="achievements">
-            <h1>Achievements</h1>
+            <h1>ACHIEVEMENTS</h1>
             <br>
             <ul>
                 <li><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTz-9DyxIvSBQWgaCF-kxnckbiPRrC758f-aigoKb8YmK0DIdmE"></li>
@@ -77,7 +77,7 @@
     </section>
 
     <section id="portfolioID" class="portfolio">
-        <h1>Portofolio</h1>
+        <h1 class="page-title">PORTFOLIO</h1>
         <ul>
             <li><img src="http://www.placehold.it/150x150"></li>
             <li><img src="http://www.placehold.it/150x150"></li>
@@ -94,7 +94,7 @@
     </section>
 
     <section id="skillsID" class="skills">
-        <h1 class="skills-header-title">SKILLS</h1>
+        <h1 class="skills-header-title page-title">SKILLS</h1>
         <section class="skills-description">
             <section class="skill1">
                 <h2><span class="skills-title-span"></span>Proficiency skills</h2>
@@ -161,7 +161,7 @@
     </section>
 
     <section id="experienceID" class="experience">
-        <h1>EXPERIENCE</h1>
+        <h1 class="page-title">EXPERIENCE</h1>
         <div>
             <h2 class="sub-title">-EDUCATION-</h2>
             <ul>
@@ -182,12 +182,14 @@
 
     <footer id="contactID" class="contact">
         <adress>
-            <h1>CONTACT</h1>
-            <p>MAIL</p>
-            <p>JOHN@DOE.COM</p>
-            <p>PHONE</p>
-            <p>0744 222 333</p>
-            <p>SOCIAL MEDIA</p>
+            <h1 class="page-title">CONTACT</h1>
+            <p class="contact-subtitle">MAIL:</p>
+            <p class="big-font">JHON@DOE.COM</p>
+            <br>
+            <p  class="contact-subtitle">PHONE:</p>
+            <p class="big-font">0744 222 333</p>
+            <p class="contact-small-name">JHON DOE</p>
+            <p  class="contact-subtitle">SOCIAL MEDIA:</p>
 
             <ul>
                 <li>
