--- a/index.html
+++ b/index.html
@@ -99,25 +99,129 @@
             <section class="skill1">
                 <h2><span class="skills-title-span"></span>Proficiency skills</h2>
                 <ul>
-                    <li>Photoshop <span class="skill-level">Level 5</span></li>
-                    <li>JS <span class="skill-level">Level 4</span></li>
-                    <li>Java <span class="skill-level">Level 3</span></li>
+                    <li>Photoshop
+                        <span class="skill-level">Level 5</span>
+                        <span class="svg-bullets">
+                            <svg height="20" width="100">
+                      <circle cx="10" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="30" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="50" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="70" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="90" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                            </svg>
+                        </span>
+                    </li>
+                    <li>
+                        JS
+                        <span class="skill-level">Level 4</span>
+                        <span class="svg-bullets">
+                            <svg height="20" width="100">
+                      <circle cx="10" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="30" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="50" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="70" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="90" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(255, 255, 255)" />
+                            </svg>
+                        </span>
+                    </li>
+                    <li>
+                        Java
+                        <span class="skill-level">Level 3</span>
+                        <span class="svg-bullets">
+                            <svg height="20" width="100">
+                      <circle cx="10" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="30" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="50" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="70" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(255, 255, 255)" />
+                      <circle cx="90" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(255, 255, 255)" />
+                            </svg>
+                        </span>
+                    </li>
                 </ul>
             </section>
             <section class="skill2">
                 <h2><span class="skills-title-span"></span>Personal skills</h2>
                 <ul>
-                    <li>Creative <span class="skill-level">Level 5</span></li>
-                    <li>Leading <span class="skill-level">Level 4</span></li>
-                    <li>TeamWork <span class="skill-level">Level 4</span></li>
+                    <li>
+                        Creative
+                        <span class="skill-level">Level 5</span>
+                        <span class="svg-bullets">
+                            <svg height="20" width="100">
+                      <circle cx="10" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="30" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="50" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="70" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="90" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                            </svg>
+                        </span>
+                    </li>
+                    <li>
+                        Leading
+                        <span class="skill-level">Level 4</span>
+                        <span class="svg-bullets">
+                            <svg height="20" width="100">
+                      <circle cx="10" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="30" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="50" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="70" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="90" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(255, 255, 255)" />
+                            </svg>
+                        </span>
+                    </li>
+                    <li>
+                        TeamWork
+                        <span class="skill-level">Level 4</span>
+                        <span class="svg-bullets">
+                            <svg height="20" width="100">
+                      <circle cx="10" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="30" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="50" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="70" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="90" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(255, 255, 255)" />
+                            </svg>
+                        </span>
+                    </li>
                 </ul>
             </section>
             <section class="skill3">
                 <h2><span class="skills-title-span"></span>Professional skills</h2>
                 <ul>
-                    <li>UI/UX Design <span class="skill-level">Level 4</span></li>
-                    <li>Graphic Design <span class="skill-level">Level 4</span></li>
-                    <li>Web Design <span class="skill-level">Level 4</span></li>
+                    <li>UI/UX Design
+                        <span class="skill-level">Level 4</span>
+                        <span class="svg-bullets">
+                            <svg height="20" width="100">
+                      <circle cx="10" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="30" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="50" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="70" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="90" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(255, 255, 255)" />
+                            </svg>
+                        </span>
+                    </li>
+                    <li>Graphic Design
+                        <span class="skill-level">Level 4</span>
+                        <span class="svg-bullets">
+                            <svg height="20" width="100">
+                      <circle cx="10" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="30" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="50" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="70" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="90" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(255, 255, 255)" />
+                            </svg>
+                        </span>
+                    </li>
+                    <li>Web Design
+                        <span class="skill-level">Level 4</span>
+                        <span class="svg-bullets">
+                            <svg height="20" width="100">
+                      <circle cx="10" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="30" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="50" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="70" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(219, 70, 30)" />
+                      <circle cx="90" cy="10" r="8" stroke="rgb(219, 70, 30)" stroke-width="2" fill="rgb(255, 255, 255)" />
+                            </svg>
+                        </span>
+                    </li>
                 </ul>
             </section>
         </section>
@@ -186,10 +290,10 @@
             <p class="contact-subtitle">MAIL:</p>
             <p class="big-font">JHON@DOE.COM</p>
             <br>
-            <p  class="contact-subtitle">PHONE:</p>
+            <p class="contact-subtitle">PHONE:</p>
             <p class="big-font">0744 222 333</p>
             <p class="contact-small-name">JHON DOE</p>
-            <p  class="contact-subtitle">SOCIAL MEDIA:</p>
+            <p class="contact-subtitle">SOCIAL MEDIA:</p>
 
             <ul>
                 <li>
