RESTORE POINT & Fixed Blockquotes borders

--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@
         <section class="testimonials">
 
             <article class="article1">
-                <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut vulputate libero, ut fermentum ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed auctor ex ac iaculis luctus. Etiam ut ligula varius, eleifend metus a, pharetra ex.</blockquote>
+                <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut vulputate libero, ut fermentum ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed auctor ex ac iaculis luctus. Etiam ut ligula varius, eleifend metus a, pharetra ex.
+                </blockquote>
+                <p class="author"></p>
                 <footer>
                     <p>Johnatan Doe</p>
                     <p>
@@ -240,7 +242,8 @@
             </article>
 
             <article class="article2">
-                <blockquote>Lorem ipsum sit amet, consectetur adipiscing elit. Integer ut vulputate libero, ut fermentum ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed auctor ex ac iaculis luctus. Etiam ut ligula varius, eleifend metus a, pharetra ex.</blockquote>
+                <blockquote>Lorem ipsum sit amet, consectetur adipiscing elit. Integer ut vulputate libero, ut fermentum ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed auctor ex ac iaculis luctus. Etiam ut ligula varius, eleifend metus a, pharetra ex. varius, eleifend metus a, pharetra ex</blockquote>
+                <p class="author"></p>
                 <footer>
                     <p>Michael Slats</p>
                     <p>
@@ -252,6 +255,7 @@
 
             <article class="article3">
                 <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut vulputate libero, ut fermentum ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed auctor ex ac iaculis luctus. Etiam ut ligula varius, eleifend metus a, pharetra ex.</blockquote>
+                <p class="author"></p>
                 <footer>
                     <p>John Smith</p>
                     <p>
