Updated 2 contact forms versions

--- a/form.html
+++ b/form.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <title>Form</title>
-
+    <title>Contact Me Form 1</title>
+    <link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="formstyle.css">
 
 </head>
@@ -81,7 +81,7 @@
 
         <fieldset>
             <legend>Message</legend>
-            <textarea name="textarea" maxlength="500" rows="10" cols="70" id="message" placeholder="Mama are mere" class="field-long field-textarea"></textarea>
+            <textarea name="textarea" maxlength="500" rows="10" cols="70" id="message" placeholder="Say something..." class="field-long field-textarea"></textarea>
         </fieldset>
 
 
