--- a/index.html
+++ b/index.html
@@ -292,7 +292,16 @@
         <adress>
             <h1 class="page-title">CONTACT</h1>
             <div class="form">
-                <a href="form.html" target="_blank">CONTACT ME</a>
+                <ul>
+                    <li>
+                        <a href="form.html" target="_blank">CONTACT ME</a>
+                    </li>
+                    <li>
+                        <a href="form2.html" target="_blank">CONTACT ME 2</a>
+                    </li>
+                </ul>
+
+
             </div>
 
             <br>
@@ -304,20 +313,7 @@
             <p class="contact-small-name">JHON DOE</p>
             <p class="contact-subtitle">SOCIAL MEDIA:</p>
 
-            <ul>
-                <li>
-                    <a href="http://www.facebook.com" target=_blank><i class="footer-icons footer-icon-github" aria-hidden="true">
-                        </i>
-                        <span class="hidden">Github</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="http://www.github.com" target=_blank><i class="footer-icons footer-icon-facebook" aria-hidden="true"></i><span class="hidden">Facebook</span></a>
-                </li>
-                <li>
-                    <a href="https://www.freecodecamp.com" target=_blank><i class="footer-icons footer-icon-freecodecamp" aria-hidden="true"></i><span class="hidden">Freecodecamp</span></a>
-                </li>
-            </ul>
+
         </adress>
     </footer>
 
