Home bottom arrows animated with CSS keyframes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1 class="home-name"><b>JOHN</b> DOE</h1>
         <footer class="home-footer">
             <p class="home-arrows-text">SCROLL DOWN TO SEE MORE</p>
-            <p class="home-arrows-icon"><a href="#about">&#xab;</a></p>
+            <div class="home-arrows-icon"><a href="#about">&#xab;</a></div>
         </footer>
 
     </header>
