--- a/index.html
+++ b/index.html
@@ -450,6 +450,11 @@
             </div>
             <!-- /WORK Container-->
         </div>
+
+        <!-- Text display -->
+        <section class="text-container">
+        </section>
+
     </section>
 
     <footer id="contactID" class="contact">
